--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "handlebars": "^4.7.7",
     "lodash.debounce": "^4.0.8",
     "material-design-icons": "^3.0.1",
+    "node": "^14.18.2",
     "notiflix": "^3.0.1"
   }
 }
